<resources>
    <string name="app_name">ClassMate</string>
    <string name="title">Welcome to SinApp ClassRoom</string>
    <string name="loading">Loading ...</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="username_hint">username, email or student number</string>
    <string name="password_hint">" "</string>
    <string name="login">SIGN IN</string>
    <string name="en">English</string>
    <string name="fa">فارسی</string>
    <string name="keep_sign_in">Keep me Signed in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="classmate" translatable="false">CLASSMATE</string>
    <string name="username_cannot_empty">username cannot be empty</string>
    <string name="password_cannot_empty">password cannot be empty</string>
    <string name="server_error">Server Error</string>
    <string name="net_error">Network Error</string>
    <string name="check_your_connection">check internet connection, please</string>
    <string name="error">Error</string>
    <string name="user_or_pass_wrong">Username or password is wrong</string>
    <string name="_er_unknown">unknown error occurred, please try again later</string>
    <string name="calender">Calender</string>
    <string name="clazz">Class</string>
    <string name="create_class">Create class</string>
    <string name="join_class">Join class</string>
    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="appKey" translatable="false">2f7b4f95-ea95-4cd4-94ee-4e3902dc5a2c</string>
    <string name="baseUrl" translatable="false">http://c1ed4630.ngrok.io/api/v1/client</string>
    <string name="class_setting">Setting</string>
    <string name="class_info">Info</string>
    <string name="hide">Hide</string>
    <string name="unenroll">Unenroll</string>
    <string name="archive">Archive</string>
    <string name="report">report abuse</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="help">Help</string>
    <string name="archived_class">Archived Classes</string>
    <string name="hided_class">Hidden Classes</string>
    <string name="count_student">%s students</string>
    <string name="class_code">Class code</string>
    <string name="join">Join</string>
    <string name="ask_code">Ask your teacher for the class code, then enter it here</string>
    <string name="class_name">Class name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="classes">Classes</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Waiting for network …</string>
    <string name="connecting">Connecting …</string>
    <string name="base_text" />
    <string name="people">People</string>
    <string name="classwork">Classwork</string>
    <string name="stream">Stream</string>
    <string name="students">Students</string>
    <string name="classmates">Classmates</string>
    <string name="teachers">Teachers</string>
    <string name="teacherAssistants">Teacher Assistants</string>
    <string name="message">New Message</string>
    <string name="remove">Remove</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>

    <string name="theme_title">Themes:</string>
    <string name="light_theme">Dark theme</string>
    <string name="dark_theme">Light theme</string>
    <string name="system_theme">Use system theme</string>
    <string name="battery_saver_theme">Battery saver theme</string>

</resources>
