<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
                name="viewModel"
                type="project.ui.main.setting.SettingViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                asyncText="@{@string/settings}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/colorPrimaryText"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/theme_title" />

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/themeDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/themeLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

            <RadioButton
                android:id="@+id/themeBattery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_saver_theme" />

            <RadioButton
                android:id="@+id/themeSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_theme" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>