<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="project.ui.course.CourseViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_round"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/content_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="@dimen/toolbar_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{viewModel::onClickBack}"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_back" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:textSize="17sp"
                    android:singleLine="true"
                    tools:text="sfgsgnslkvnzlvnz cvlxcnv xmvnxlvmb xmvb lxmv bxmv bxlcbcnv lxv zlcj vz vzcmv zlmcv lz cvmlzm vlzcv"
                    android:lines="1"
                    android:maxLines="1"
                    android:gravity="center"
                    fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/spacing_medium"/>

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>


        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/toolbar"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:layout_width="@dimen/round_toolbar"
            android:layout_height="@dimen/round_toolbar"
            android:layout_alignTop="@+id/toolbar"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="@dimen/toolbar_height"
            android:background="@drawable/ic_round"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="@dimen/round_toolbar"
            android:layout_height="@dimen/round_toolbar"
            android:layout_marginTop="@dimen/toolbar_height"
            android:layout_marginRight="0dp"
            android:background="@drawable/ic_round"
            android:rotation="90"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />


        <View
            android:layout_width="@dimen/round_toolbar"
            android:layout_height="@dimen/round_toolbar"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_round"
            android:rotation="270"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="@dimen/round_toolbar"
            android:layout_height="@dimen/round_toolbar"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_round"
            android:rotation="180"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlHardcoded" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/grey_round"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                style="@style/btn_round"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btn1"
                    style="@style/RippleStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.select(1)}">

                    <androidx.appcompat.widget.AppCompatTextView
                        fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/stream"
                        android:textColor="@{viewModel.selected == 1 ? @color/colorPrimary : @color/grey_600}" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/btn_round"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btn2"
                    style="@style/RippleStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.select(2)}">

                    <androidx.appcompat.widget.AppCompatTextView
                        fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/classwork"
                        android:textColor="@{viewModel.selected == 2 ? @color/colorPrimary : @color/grey_600}" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/btn_round"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btn3"
                    style="@style/RippleStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.select(3)}">

                    <androidx.appcompat.widget.AppCompatTextView
                        fontPath='@{"fonts/IRANYekanMobileBold.ttf"}'
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/people"
                        android:textColor="@{viewModel.selected == 3 ? @color/colorPrimary : @color/grey_600}" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>